<resources>
    <string name="app_name">Refresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="thumbnail">Thumbnail for Reddit posts</string>
    <string name="upvote_button">Upvote button</string>
    <string name="downvote_button">Downvote button</string>
    <string name="add_account">Add Account</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="menu_icon">Icon for dropdown item</string>
    <string name="logged_out">Log in to perform this action</string>
    <string name="log_out">Log Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="subreddits">Subreddits</string>
    <string name="num_comments">%1$d comments</string>
    <string name="dropdown">Dropdown button</string>
    <string name="frontpage">Front Page</string>
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="change_view">Change View</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="compact">Compact</string>
    <string name="cards">Cards</string>
    <string name="small_cards">Small Cards</string>
    <string name="list">List</string>
    <string name="gallery">Gallery</string>
    <string name="hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="rising">Rising</string>
    <string name="top">Top</string>
    <string name="controversial">Controversial</string>
    <string name="best">Best</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="all_time">All Time</string>
    <string name="bullet">\u2022</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="saved">Saved</string>
    <string name="pinned">Pinned</string>
    <string name="favorites">Favorites</string>
    <string name="change_theme">Change Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="comments">Comments</string>
</resources>
