<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="97"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="98"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/best"
                android:icon="@drawable/best"
                android:title="@string/best"
                android:visible="false" />
            <item
                android:id="@+id/hot"
                android:icon="@drawable/hot"
                android:title="@string/hot" />
            <item
                android:id="@+id/sort_new"
                android:icon="@drawable/ic_new_releases_black_24dp"
                android:title="@string/sort_new" />
            <item
                android:id="@+id/controversial"
                android:icon="@drawable/controversial"
                android:title="@string/controversial" />
            <item
                android:id="@+id/top"
                android:icon="@drawable/top"
                android:title="@string/top" />
            <item
                android:id="@+id/rising"
                android:icon="@drawable/rising"
                android:title="@string/rising" />
        </menu>
    </item>
    <item
        android:id="@+id/change_view"
        android:orderInCategory="99"
        android:title="@string/change_view"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/cards" />
                <item android:title="@string/small_cards" />
                <item
                    android:checked="true"
                    android:title="@string/compact" />
                <item android:title="@string/list" />
                <item android:title="@string/gallery" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
