<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/best"
                android:icon="@drawable/best"
                android:title="@string/best" />
            <item
                android:id="@+id/hot"
                android:icon="@drawable/hot"
                android:title="@string/hot" />
            <item
                android:id="@+id/sort_new"
                android:icon="@drawable/ic_new_releases_black_24dp"
                android:title="@string/sort_new" />
            <item
                android:icon="@drawable/controversial"
                android:title="@string/controversial">
                <menu>
                    <group android:id="@+id/controversial">
                        <item
                            android:id="@+id/controversial_hour"
                            android:title="@string/hour" />
                        <item
                            android:id="@+id/controversial_day"
                            android:title="@string/day" />
                        <item
                            android:id="@+id/controversial_week"
                            android:title="@string/week" />
                        <item
                            android:id="@+id/controversial_month"
                            android:title="@string/month" />
                        <item
                            android:id="@+id/controversial_year"
                            android:title="@string/year" />
                        <item
                            android:id="@+id/controversial_all_time"
                            android:title="@string/all_time" />
                    </group>
                </menu>
            </item>
            <item
                android:icon="@drawable/top"
                android:title="@string/top">
                <menu>
                    <group android:id="@+id/top">
                        <item
                            android:id="@+id/top_hour"
                            android:title="@string/hour" />
                        <item
                            android:id="@+id/top_day"
                            android:title="@string/day" />
                        <item
                            android:id="@+id/top_week"
                            android:title="@string/week" />
                        <item
                            android:id="@+id/top_month"
                            android:title="@string/month" />
                        <item
                            android:id="@+id/top_year"
                            android:title="@string/year" />
                        <item
                            android:id="@+id/top_all_time"
                            android:title="@string/all_time" />
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/rising"
                android:icon="@drawable/rising"
                android:title="@string/rising" />
        </menu>
    </item>
    <item
        android:id="@+id/change_theme"
        android:title="@string/change_theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/light"
                    android:checked="true"
                    android:title="@string/light" />
                <item
                    android:id="@+id/dark"
                    android:title="@string/dark" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/change_view"
        android:title="@string/change_view"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/cards"
                    android:title="@string/cards" />
                <item
                    android:id="@+id/small_cards"
                    android:title="@string/small_cards" />
                <item
                    android:id="@+id/compact"
                    android:checked="true"
                    android:title="@string/compact" />
                <item
                    android:id="@+id/list"
                    android:title="@string/list" />
                <item
                    android:id="@+id/gallery"
                    android:title="@string/gallery" />
            </group>
        </menu>
    </item>
</menu>
