<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/add_account_light"
        android:title="@string/add_account" />

    <item
        android:id="@+id/postsFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/account"
        android:title="@string/profile" />

    <item
        android:id="@+id/inbox"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/inbox" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

</menu>
