<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/account_circle"
        android:title="@string/profile" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:icon="@drawable/night"
        android:title="@string/dark_mode"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="always" />

    <item android:title="Subreddits">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="Android" />
                <item android:title="UMD" />
            </group>
        </menu>
    </item>

</menu>
