<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <ImageButton
        android:id="@+id/upvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/upvote_button"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toStartOf="@+id/left"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_up_gray" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="59.8k" />

    <ImageButton
        android:id="@+id/downvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/downvote_button"
        app:layout_constraintEnd_toStartOf="@+id/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points"
        app:srcCompat="@drawable/ic_arrow_down_gray" />

    <android.support.constraint.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".12" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/num_comments"
        app:layout_constraintEnd_toStartOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Description" />

    <TextView
        android:id="@+id/num_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:text="#### comments" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/transparent" />

</android.support.constraint.ConstraintLayout>